# xdiff

./: Cargo.toml  README.md  data.txt  yaml.md
examples/: alph.rs  config.rs  flatten.rs  highlight.rs  similar.rs  tryfn.rs  tty.rs
fixtures/: bad.yml  diff1.txt  highlight1.txt  test.yml  xreq_test.yml
src/: cli.rs  lib.rs  utils.rs
src/config/: mod.rs  xdiff.rs  xreq.rs
tests/: cli_tests.rs
tests/cmd/: xdiff_run_failed.md  xdiff_run_succeed.md  xreq_run_succeed.md
